# llvm-energy-analysis

./: DESIGN.md  EVALUATION.md  IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  PS.md  README.md
.claude/: settings.json
backend/: .env.example  README.md  pyproject.toml
backend/src/backend/: main.py
backend/src/backend/api/: router.py
backend/src/backend/api/routes/: analyze.py  report.py
backend/src/backend/core/: config.py
backend/src/backend/parsers/: __init__.py  clang_ast.py  energy.py  remarks.py
backend/src/backend/schemas/: __init__.py  analyze.py
backend/src/backend/services/: __init__.py  analyzer.py  ast_dump.py  compiler.py  energy_model.py  report.py  workspace.py
backend/tests/: test_analyze.py  test_clang_ast.py  test_energy_parser.py  test_remarks_parser.py  test_report.py  test_validation.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(analyze)/: layout.tsx
frontend/app/(marketing)/: layout.tsx
frontend/components/dashboard/: analysis-tabs.tsx  analyzer-dashboard.tsx  app-header.tsx  ast-node.tsx  ast-panel.tsx  cfg-node.tsx  (+11 more)
frontend/hooks/: use-mobile.ts
frontend/lib/: api.ts  sample-program.ts  types.ts
llvm-pass/: CMakeLists.txt  README.md
llvm-pass/include/energy/: EnergyAnalysisPass.h  EnergyModel.h
llvm-pass/models/: aarch64-energy-model.json  x86_64-energy-model.json
llvm-pass/scripts/: build.sh  run-pass.sh
llvm-pass/src/: EnergyAnalysisPass.cpp  EnergyModel.cpp
llvm-pass/test/fixtures/: loop_hotspot.cpp
research/: ENERGY_MODEL_METHODOLOGY.md
scripts/: build.ps1  build.sh  run-tests.sh  run.ps1  run.sh
testcases/: 01_empty_main.cpp  02_loop_hotspot.cpp  03_memory_bound.cpp  04_branch_heavy.cpp  05_fp_vector.cpp  06_call_chain.cpp
(+40 files in other folders)
